--- a/sections/indicators.liquid
+++ b/sections/indicators.liquid
@@ -120,6 +120,8 @@
     font-size: 0.85rem;
     font-weight: 600;
     margin-bottom: 15px;
+    width: auto;
+    white-space: nowrap;
   }
 
   .indicator-content h3 {
