--- a/sections/indicators.liquid
+++ b/sections/indicators.liquid
@@ -108,6 +108,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
   }
 
   .indicator-badge {
@@ -121,7 +122,9 @@
     font-weight: 600;
     margin-bottom: 15px;
     width: auto;
+    max-width: fit-content;
     white-space: nowrap;
+    flex-shrink: 0;
   }
 
   .indicator-content h3 {
