--- a/sections/indicators.liquid
+++ b/sections/indicators.liquid
@@ -226,6 +226,7 @@
 
     .indicator-content {
       padding: 20px 0;
+      text-align: left;
     }
 
     .indicator-features li {
@@ -247,9 +248,6 @@
       width: 100%;
       max-width: 100%;
       margin: 0;
-    }
-
-    .indicator-visual-container {
       height: 300px;
     }
     
@@ -282,6 +280,10 @@
 
     .indicator-content h3 {
       font-size: 1.5rem;
+    }
+
+    .indicator-content {
+      text-align: left;
     }
 
     .indicator-badge {
