--- a/sections/indicators.liquid
+++ b/sections/indicators.liquid
@@ -257,7 +257,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      object-position: left center;
+      object-position: center center;
       max-width: 100%;
       display: block;
       border-radius: 0;
@@ -300,7 +300,9 @@
 
     .indicator-visual-container img {
       width: 100%;
-      height: auto;
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
     }
   }
 </style>
