--- a/sections/trading-bot.liquid
+++ b/sections/trading-bot.liquid
@@ -156,6 +156,10 @@
   .bot-feature-icon {
     width: 50px;
     height: 50px;
+    min-width: 50px;
+    min-height: 50px;
+    max-width: 50px;
+    max-height: 50px;
     background: transparent;
     border: 2px solid #00ff41;
     border-radius: 50%;
